Fix dropdown scroll issue - prevent page shift when opening dropdown

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -433,6 +433,8 @@ body
     margin: 80px 0 60px 0
   .dropdown
     z-index: 5
+    position: relative
+    scroll-margin-top: 120px
   .dropdown[open] summary::before
     transform:  rotate(180deg)
   summary::-webkit-details-marker
@@ -452,6 +454,7 @@ body
     color: $white
     height: 33px
     border-bottom: 1px solid #9299AF
+    scroll-margin-top: 120px
     @media screen and (max-width: 600px)
       font-size: 14px
       line-height: 22px
